--- a/package/crds/apigee.gcp.upbound.io_endpointattachments.yaml
+++ b/package/crds/apigee.gcp.upbound.io_endpointattachments.yaml
@@ -35,7 +35,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: EndpointAttachment is the Schema for the EndpointAttachments
-          API. Apigee Endpoint Attachment.
+          API. <no value>
         properties:
           apiVersion:
             description: |-
@@ -74,91 +74,10 @@ spec:
               forProvider:
                 properties:
                   location:
-                    description: Location of the endpoint attachment.
                     type: string
                   orgId:
-                    description: |-
-                      The Apigee Organization associated with the Apigee instance,
-                      in the format organizations/{{org_name}}.
                     type: string
-                  orgIdRef:
-                    description: Reference to a Organization in apigee to populate
-                      orgId.
-                    properties:
-                      name:
-                        description: Name of the referenced object.
-                        type: string
-                      policy:
-                        description: Policies for referencing.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: |-
-                              Resolution specifies whether resolution of this reference is required.
-                              The default is 'Required', which means the reconcile will fail if the
-                              reference cannot be resolved. 'Optional' means this reference will be
-                              a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: |-
-                              Resolve specifies when this reference should be resolved. The default
-                              is 'IfNotPresent', which will attempt to resolve the reference only when
-                              the corresponding field is not present. Use 'Always' to resolve the
-                              reference on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    required:
-                    - name
-                    type: object
-                  orgIdSelector:
-                    description: Selector for a Organization in apigee to populate
-                      orgId.
-                    properties:
-                      matchControllerRef:
-                        description: |-
-                          MatchControllerRef ensures an object with the same controller reference
-                          as the selecting object is selected.
-                        type: boolean
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: MatchLabels ensures an object with matching labels
-                          is selected.
-                        type: object
-                      policy:
-                        description: Policies for selection.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: |-
-                              Resolution specifies whether resolution of this reference is required.
-                              The default is 'Required', which means the reconcile will fail if the
-                              reference cannot be resolved. 'Optional' means this reference will be
-                              a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: |-
-                              Resolve specifies when this reference should be resolved. The default
-                              is 'IfNotPresent', which will attempt to resolve the reference only when
-                              the corresponding field is not present. Use 'Always' to resolve the
-                              reference on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    type: object
                   serviceAttachment:
-                    description: 'Format: projects//regions//serviceAttachments/*'
                     type: string
                   serviceAttachmentRef:
                     description: Reference to a ServiceAttachment in compute to populate
@@ -236,6 +155,8 @@ spec:
                             type: string
                         type: object
                     type: object
+                required:
+                - orgId
                 type: object
               initProvider:
                 description: |-
@@ -251,10 +172,8 @@ spec:
                   autoscaler.
                 properties:
                   location:
-                    description: Location of the endpoint attachment.
                     type: string
                   serviceAttachment:
-                    description: 'Format: projects//regions//serviceAttachments/*'
                     type: string
                   serviceAttachmentRef:
                     description: Reference to a ServiceAttachment in compute to populate
@@ -511,31 +430,18 @@ spec:
               atProvider:
                 properties:
                   connectionState:
-                    description: State of the endpoint attachment connection to the
-                      service attachment.
                     type: string
                   host:
-                    description: Host that can be used in either HTTP Target Endpoint
-                      directly, or as the host in Target Server.
                     type: string
                   id:
-                    description: an identifier for the resource with format {{org_id}}/endpointAttachments/{{endpoint_attachment_id}}
                     type: string
                   location:
-                    description: Location of the endpoint attachment.
                     type: string
                   name:
-                    description: |-
-                      Name of the Endpoint Attachment in the following format:
-                      organizations/{organization}/endpointAttachments/{endpointAttachment}.
                     type: string
                   orgId:
-                    description: |-
-                      The Apigee Organization associated with the Apigee instance,
-                      in the format organizations/{{org_name}}.
                     type: string
                   serviceAttachment:
-                    description: 'Format: projects//regions//serviceAttachments/*'
                     type: string
                 type: object
               conditions:
