--- a/package/crds/apigee.gcp.upbound.io_environments.yaml
+++ b/package/crds/apigee.gcp.upbound.io_environments.yaml
@@ -769,6 +769,26 @@ spec:
                             type: string
                         type: object
                     type: object
+                  properties:
+                    description: |-
+                      Key-value pairs that may be used for customizing the environment.
+                      Structure is documented below.
+                    properties:
+                      property:
+                        description: |-
+                          List of all properties in the object.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            name:
+                              description: The property key.
+                              type: string
+                            value:
+                              description: The property value.
+                              type: string
+                          type: object
+                        type: array
+                    type: object
                   type:
                     description: |-
                       Types that can be selected for an Environment. Each of the types are
@@ -837,6 +857,26 @@ spec:
                           has the specified environment. If not specified, the default is determined by the
                           recommended minimum number of nodes for that gateway.
                         type: string
+                    type: object
+                  properties:
+                    description: |-
+                      Key-value pairs that may be used for customizing the environment.
+                      Structure is documented below.
+                    properties:
+                      property:
+                        description: |-
+                          List of all properties in the object.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            name:
+                              description: The property key.
+                              type: string
+                            value:
+                              description: The property value.
+                              type: string
+                          type: object
+                        type: array
                     type: object
                   type:
                     description: |-
@@ -1080,6 +1120,26 @@ spec:
                       The Apigee Organization associated with the Apigee environment,
                       in the format organizations/{{org_name}}.
                     type: string
+                  properties:
+                    description: |-
+                      Key-value pairs that may be used for customizing the environment.
+                      Structure is documented below.
+                    properties:
+                      property:
+                        description: |-
+                          List of all properties in the object.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            name:
+                              description: The property key.
+                              type: string
+                            value:
+                              description: The property value.
+                              type: string
+                          type: object
+                        type: array
+                    type: object
                   type:
                     description: |-
                       Types that can be selected for an Environment. Each of the types are
