--- a/package/crds/appengine.gcp.upbound.io_standardappversions.yaml
+++ b/package/crds/appengine.gcp.upbound.io_standardappversions.yaml
@@ -1576,8 +1576,9 @@ spec:
                           Structure is documented below.
                         properties:
                           maxInstances:
-                            description: Maximum number of instances to run for this
-                              version. Set to zero to disable maxInstances configuration.
+                            description: |-
+                              Maximum number of instances to run for this version. Set to zero to disable maxInstances configuration.
+                              Note: Starting from March 2025, App Engine sets the maxInstances default for standard environment deployments to 20. This change doesn't impact existing apps. To override the default, specify a new value between 0 and 2147483647, and deploy a new version or redeploy over an existing version. To disable the maxInstances default configuration setting, specify the maximum permitted value 2147483647.
                             type: number
                           minInstances:
                             description: Minimum number of instances to run for this
@@ -1974,8 +1975,9 @@ spec:
                           Structure is documented below.
                         properties:
                           maxInstances:
-                            description: Maximum number of instances to run for this
-                              version. Set to zero to disable maxInstances configuration.
+                            description: |-
+                              Maximum number of instances to run for this version. Set to zero to disable maxInstances configuration.
+                              Note: Starting from March 2025, App Engine sets the maxInstances default for standard environment deployments to 20. This change doesn't impact existing apps. To override the default, specify a new value between 0 and 2147483647, and deploy a new version or redeploy over an existing version. To disable the maxInstances default configuration setting, specify the maximum permitted value 2147483647.
                             type: number
                           minInstances:
                             description: Minimum number of instances to run for this
@@ -2539,8 +2541,9 @@ spec:
                           Structure is documented below.
                         properties:
                           maxInstances:
-                            description: Maximum number of instances to run for this
-                              version. Set to zero to disable maxInstances configuration.
+                            description: |-
+                              Maximum number of instances to run for this version. Set to zero to disable maxInstances configuration.
+                              Note: Starting from March 2025, App Engine sets the maxInstances default for standard environment deployments to 20. This change doesn't impact existing apps. To override the default, specify a new value between 0 and 2147483647, and deploy a new version or redeploy over an existing version. To disable the maxInstances default configuration setting, specify the maximum permitted value 2147483647.
                             type: number
                           minInstances:
                             description: Minimum number of instances to run for this
