--- a/package/crds/bigtable.gcp.upbound.io_tables.yaml
+++ b/package/crds/bigtable.gcp.upbound.io_tables.yaml
@@ -75,8 +75,12 @@ spec:
                 properties:
                   automatedBackupPolicy:
                     description: Defines an automated backup policy for a table, specified
-                      by Retention Period and Frequency. To disable, set both Retention
-                      Period and Frequency to 0.
+                      by Retention Period and Frequency. To create a table with automated
+                      backup disabled, omit this argument. To disable automated backup
+                      on an existing table that has automated backup enabled, set
+                      both Retention Period and Frequency to "0". If this argument
+                      is not provided in the configuration on update, the resource's
+                      automated backup policy will not be modified.
                     properties:
                       frequency:
                         type: string
@@ -204,8 +208,12 @@ spec:
                 properties:
                   automatedBackupPolicy:
                     description: Defines an automated backup policy for a table, specified
-                      by Retention Period and Frequency. To disable, set both Retention
-                      Period and Frequency to 0.
+                      by Retention Period and Frequency. To create a table with automated
+                      backup disabled, omit this argument. To disable automated backup
+                      on an existing table that has automated backup enabled, set
+                      both Retention Period and Frequency to "0". If this argument
+                      is not provided in the configuration on update, the resource's
+                      automated backup policy will not be modified.
                     properties:
                       frequency:
                         type: string
@@ -415,8 +423,12 @@ spec:
                 properties:
                   automatedBackupPolicy:
                     description: Defines an automated backup policy for a table, specified
-                      by Retention Period and Frequency. To disable, set both Retention
-                      Period and Frequency to 0.
+                      by Retention Period and Frequency. To create a table with automated
+                      backup disabled, omit this argument. To disable automated backup
+                      on an existing table that has automated backup enabled, set
+                      both Retention Period and Frequency to "0". If this argument
+                      is not provided in the configuration on update, the resource's
+                      automated backup policy will not be modified.
                     properties:
                       frequency:
                         type: string
