certificatemanager: updated descriptions

--- a/package/crds/certificatemanager.gcp.upbound.io_certificates.yaml
+++ b/package/crds/certificatemanager.gcp.upbound.io_certificates.yaml
@@ -1322,7 +1322,9 @@ spec:
                       EDGE_CACHE: Certificates with scope EDGE_CACHE are special-purposed certificates, served from Edge Points of Presence.
                       See https://cloud.google.com/vpc/docs/edge-locations.
                       ALL_REGIONS: Certificates with ALL_REGIONS scope are served from all GCP regions (You can only use ALL_REGIONS with global certs).
-                      See https://cloud.google.com/compute/docs/regions-zones
+                      See https://cloud.google.com/compute/docs/regions-zones.
+                      CLIENT_AUTH: Certificates with CLIENT_AUTH scope are used by a load balancer (TLS client) to be presented to the backend (TLS server) when backend mTLS is configured.
+                      See https://cloud.google.com/load-balancing/docs/backend-authenticated-tls-backend-mtls#client-certificate.
                     type: string
                   selfManaged:
                     description: |-
@@ -1620,7 +1622,9 @@ spec:
                       EDGE_CACHE: Certificates with scope EDGE_CACHE are special-purposed certificates, served from Edge Points of Presence.
                       See https://cloud.google.com/vpc/docs/edge-locations.
                       ALL_REGIONS: Certificates with ALL_REGIONS scope are served from all GCP regions (You can only use ALL_REGIONS with global certs).
-                      See https://cloud.google.com/compute/docs/regions-zones
+                      See https://cloud.google.com/compute/docs/regions-zones.
+                      CLIENT_AUTH: Certificates with CLIENT_AUTH scope are used by a load balancer (TLS client) to be presented to the backend (TLS server) when backend mTLS is configured.
+                      See https://cloud.google.com/load-balancing/docs/backend-authenticated-tls-backend-mtls#client-certificate.
                     type: string
                   selfManaged:
                     description: |-
@@ -1995,7 +1999,9 @@ spec:
                       EDGE_CACHE: Certificates with scope EDGE_CACHE are special-purposed certificates, served from Edge Points of Presence.
                       See https://cloud.google.com/vpc/docs/edge-locations.
                       ALL_REGIONS: Certificates with ALL_REGIONS scope are served from all GCP regions (You can only use ALL_REGIONS with global certs).
-                      See https://cloud.google.com/compute/docs/regions-zones
+                      See https://cloud.google.com/compute/docs/regions-zones.
+                      CLIENT_AUTH: Certificates with CLIENT_AUTH scope are used by a load balancer (TLS client) to be presented to the backend (TLS server) when backend mTLS is configured.
+                      See https://cloud.google.com/load-balancing/docs/backend-authenticated-tls-backend-mtls#client-certificate.
                     type: string
                   selfManaged:
                     description: |-
